--- a/popup.html
+++ b/popup.html
@@ -6,7 +6,7 @@
 	</head>
 	<body>
 		<section>
-			<h1>Indian Newspaper</h1>
+			<h1>Indian Newspapers</h1>
 			<hr />
 			<ul id="anchorList"></ul>
 		</section>
